--- a/DM20212N/build.gradle
+++ b/DM20212N/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
 
