--- a/live/build.gradle
+++ b/live/build.gradle
@@ -12,22 +12,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
-	implementation 'org.springframework.boot:spring-boot-devtools:2.5.3'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.5.4'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.4'
 
 	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.12.4'
-
-	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
 	implementation 'com.h2database:h2:1.4.200'
 
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-bean-validators', version: '3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.5.10'
 
 	implementation group: 'org.hibernate', name: 'hibernate-envers', version: '5.5.6.Final'
 	implementation group: 'org.hibernate', name: 'hibernate-validator', version: '7.0.1.Final'
